EDSC-4421: Fixing styling discrepancies from bootstrap upgrade  (#1870)
* EDSC-4421 Fixing Facet text cutoff

* EDSC-4421 Fixing additional filters text wrapping

* EDSC-4421 Fixing shapefile 'x' button. Aligning subscription action buttons

* EDSC-4421 Fixing test

* EDSC-4421 Adjusting modal header

* EDSC-4421 Simplifying css fixes

* EDSC-4421 PR feedback

* EDSC-4421 simplifying css fix

--- a/static/src/js/components/Sidebar/SidebarFiltersItem.scss
+++ b/static/src/js/components/Sidebar/SidebarFiltersItem.scss
@@ -13,6 +13,7 @@
   &__body {
     padding: 0.75rem 0.75rem 1rem;
     border-bottom: 1px solid utils.$color__carbon--20;
+    font-size: 0.825rem;
 
     .sidebar-filters-item--no-padding & {
       padding: 0;
